--- a/frame-react/index.html
+++ b/frame-react/index.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <div id="app"></div>
+	<script src="https://cdn.bootcss.com/react/15.4.2/react.js"></script>
+	<script src="https://cdn.bootcss.com/react/15.4.2/react-dom.js"></script>
+	<script src="https://cdn.bootcss.com/react-router/2.8.1/ReactRouter.js"></script>
     <script src="./bundle.js"></script>
   </body>
 </html>
