--- a/frame-react/index.html
+++ b/frame-react/index.html
@@ -1,12 +1,14 @@
 <html>
   <head>
     <title>webpack2 demo</title>
+    <link href="https://cdn.bootcss.com/antd/2.10.0/antd.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
-	<script src="https://cdn.bootcss.com/react/15.4.2/react.js"></script>
-	<script src="https://cdn.bootcss.com/react/15.4.2/react-dom.js"></script>
-	<script src="https://cdn.bootcss.com/react-router/2.8.1/ReactRouter.js"></script>
+  	<script src="https://cdn.bootcss.com/react/15.4.2/react.js"></script>
+  	<script src="https://cdn.bootcss.com/react/15.4.2/react-dom.js"></script>
+  	<script src="https://cdn.bootcss.com/react-router/2.8.1/ReactRouter.js"></script>
+    <script src="https://cdn.bootcss.com/antd/2.10.0/antd.min.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
