--- a/frame-react/index.html
+++ b/frame-react/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://cdn.bootcss.com/react/15.2.1/react.js"></script>
   	<script src="https://cdn.bootcss.com/react/15.2.1/react-dom.js"></script>
   	<script src="https://cdn.bootcss.com/react-router/2.7.0/ReactRouter.js"></script>
